# glaucoma-detection-project

./: .env.example  .gitignore  README.md  config.py  create_dataset_dirs.py  gitignore  main.py  pyproject.toml  requirements.txt
data/: dataset_loader.py  preprocessing.py
data/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb
evaluation/: final_eval.py
explainability/: gradcam.py
features/: feature_extractor.py
models/: classical_ml.py  cnn_model.py  ensemble.py  seg_trainer.py  trainer.py  unet.py
notebooks/: 02_feature_engineering.ipynb  03_classical_ml.ipynb  04_cnn_training.ipynb  05b_efficientnet.ipynb  06_segmentation.ipynb  07_final_evaluation.ipynb  08_ensemble.ipynb
outputs/figures/: report.tex
outputs/logs/glaucoma_efficientnet_b0/: events.out.tfevents.1774347208.Sourajit.22204.0  events.out.tfevents.1774416368.Sourajit.14492.0
outputs/logs/glaucoma_resnet18/: events.out.tfevents.1774274846.Sourajit.14776.0  events.out.tfevents.1774276860.Sourajit.14776.1  events.out.tfevents.1774277010.Sourajit.6540.0  events.out.tfevents.1774414637.Sourajit.20180.0
outputs/models/: LogisticRegression_best.pkl  SVM_RBF_best.pkl
outputs/results/: ablation_study.csv  ablation_study.tex  all_models_comparison.csv  architecture_comparison.csv  architecture_comparison.tex  classical_ml_pub_table.csv  classical_ml_results.csv  classical_ml_roc_data.pkl  cnn_test_results.pkl  complete_model_comparison.csv  complete_model_comparison.tex  cross_dataset_cnn.csv  dataset_with_unet_cdr.csv  efficientnet_test_results.pkl  ensemble_test_results.pkl  features_cache.pkl  final_results_table.csv  gradcam_focus_scores.csv  proposed_cnn_cdr_results.pkl  rf_feature_importances.csv  segmentation_metrics.csv
