[project]
name = "glaucoma-detection-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=1.3.0",
    "grad-cam>=1.4.8",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "joblib>=1.3.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "segmentation-models-pytorch>=0.3.3",
    "tensorboard>=2.13.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]
